# django-homework-1

./: README.md  main.py  pyproject.toml
ads/: admin.py  models.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_location_alter_ad_options_alter_category_options_and_more.py
ads/views/: ads.py  category.py  service.py  users.py
homework_1/: settings.py  urls.py
