[tool.poetry]
name = "homework-1"
version = "0.1.0"
description = ""
authors = ["RafaCom <Rafaelshirinan2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
pillow = "^10.1.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
